fix: ie align-self conflict on articles container

--- a/styles/style.css
+++ b/styles/style.css
@@ -107,7 +107,6 @@ html, body {
 }
 
 .content .articles {
-    align-self: center;
     display: flex;
     flex-wrap: wrap;
     justify-content: space-between;
